# agentic_trading

./: .gitignore  README.md  cli.py  engine.py  main.py  pyproject.toml  requirements.txt  simulation.py  test.py  viewer.py
agents/: analysts.py  fund_manager.py  researchers.py  risk_managers.py
agents/db/: db.py
agents/utils/: analyst_utils.py  debate_utils.py  helpers.py  llm_utils.py  prompts.py
config/: settings.py
utils/: utils.py
viewer/: simulation.py  viewer.py
