[project]
name = "agentic-trader"
version = "0.1.0"
description = "Multi-agent investment simulation and analysis system"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
dependencies = [
    "yfinance",
    "pandas",
    "pandas_ta",
    "matplotlib",
    "rich",
    "typer",
    "gradio",
    "plotly",
    "numpy==1.26.3"
]
requires-python = ">=3.9"

[project.scripts]
agentic-trader = "cli:app"

[tool.setuptools]
packages = ["agents", "agents.utils", "agents.db", "config", "simulation", "viewer"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
